Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65145

Broken copy-paste after 49.../50 days

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.3, 5.14.0 Alpha
    • 5.9.1, 5.9.2, 5.11.1
    • QPA: X11/XCB
    • None
    • Debian
      64bit
      testing/unstable/experimental
      libqt5... 5.9.2
      libqt4... 4.8.7
    • 036fe49580d7470eeaa4c168845bdf2483946f22 (qt/qtbase/5.12)

    Description

      After 49 days and a bit (lets say 50 days) copy and paste within qt-powered programs is broken. I can copy from e.g. firefox and past it in konsole or telepathy. But whatever I copy from such programs is not copied.
      Restarting the programs helps.

      At first I reported it inclusive a similar issue to KDE:
      https://bugs.kde.org/show_bug.cgi?id=381823

      Which lead to (which is fixed but was said that this should be reported here):
      https://bugs.kde.org/show_bug.cgi?id=377901#c18

       

      Klipper also has no new entry since. Not even those copied from non-qt-programs.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            mbellersen mbellersen
            Votes:
            4 Vote for this issue
            Watchers:
            16 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes